# person-gen

./: Cargo.toml  README.md  build.rs
resources/: en_US.female_firstnames.txt  en_US.lnames  en_US.male_firstnames.txt  us.both_firstnames.txt
src/: lib.rs  main.rs
src/config/: mod.rs
