[package]
name = "person-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "4.0.1"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.5.10"

[build-dependencies]
directories = "4.0.1"
